--- a/Main.html
+++ b/Main.html
@@ -31,11 +31,13 @@
                     <li>Dệt may chính là ngành công nghiệp gây ô nhiễm môi trường đứng thứ 2 toàn cầu. Để sản xuất ra lượng sợi nói trên, cần khoảng 2.000 tỷ gallon nước và 145 triệu tấn than. Riêng than là nguồn quan trọng gây ô nhiễm không khí và nước (Nguồn: VOV).</li>
                 </ul>
             </p>
+        </div>
 
-            <h2 id="section2-h2">I. Chiến lược</h2>
+        <div class="section2">
+            <h1 id="section2-h1">I. Chiến lược</h1>
 
-            <h3 id="section2-h3.1">1. Nghiên cứu và đầu tư vào công nghệ sản xuất vải tái chế và vải từ nguyên liệu xanh để thiết kế sản phẩm chất lượng cao và thân thiện với môi trường:</h3>
-            <p>
+            <h2 id="section2-h2.1">1. Nghiên cứu và đầu tư vào công nghệ sản xuất vải tái chế và vải từ nguyên liệu xanh để thiết kế sản phẩm chất lượng cao và thân thiện với môi trường:</h2>
+            <p id="section2-p.1">
                 - Sử dụng vải tái chế: OWEN có thể tạo ra một dòng sản phẩm sử dụng vải tái chế để giảm thiểu lượng rác thải ra môi trường.<br>
                 - Sử dụng nguyên liệu xanh: OWEN có thể sử dụng các nguyên liệu xanh tại Việt Nam như vải từ sen, cà phê, bạc hà, tre… có tính áp dụng cao và được thị trường đón nhận.<br>
                 <ul>
@@ -57,7 +59,19 @@
                 </ul>
             </p>
 
-            <h3 id="section2-h3.2"></h3>
+            <p id="section2-p.2">
+                <strong>2.  Thúc đẩy thị trường và nâng cao nhận thức của khách hàng</strong>về lợi ích của sản phẩm từ chất liệu tái chế và nguyên liệu xanh bằng cách in các khẩu hiệu, thông điệp lên các sản phẩm tặng kèm như túi đựng đồ hay áp dụng các yếu tố liên quan đến cổ vũ bảo vệ môi trường trong trang trí cửa hàng như quote, hình ảnh tuyên truyền,...<br>
+                <ul>
+                    <li>Ngoài ra, OWEN nên cho ra mắt các bộ sưu tập theo mùa nhằm đánh vào nhu cầu của người tiêu dùng. Ví dụ, vào mùa hè nên cho ra mắt các sản phẩm thoáng mát phù hợp với thời tiết.</li>
+                </ul>
+            </p>
+
+            <p id="section2-p.3"><strong>
+                3. Tăng cường các hoạt động tiếp thị và quảng bá sản phẩm</strong> thông qua các kênh truyền thông trực tuyến để tăng cường nhận diện thương hiệu qua các nền tảng mạng xã hội phổ biến với đối tượng tiêu dùng ngày nay như FaceBook, TikTok, Instagram,...
+                <ul>
+                    <li>OWEN cũng có thể kí kết hợp đồng quảng cáo với các nhà sáng tạo nội dung trên mạng. Một ví dụ điển hình như: Châu Bùi - một người mẫu(model) hay làm những nội dung dành cho thế hệ trẻ rất nổi tiếng và cũng đang có hình ảnh đẹp trong mắt người hâm mộ.</li>
+                </ul>
+            </p>
         </div>
     </div>
 
