--- a/Main.html
+++ b/Main.html
@@ -31,13 +31,18 @@
                     <li>Dệt may chính là ngành công nghiệp gây ô nhiễm môi trường đứng thứ 2 toàn cầu. Để sản xuất ra lượng sợi nói trên, cần khoảng 2.000 tỷ gallon nước và 145 triệu tấn than. Riêng than là nguồn quan trọng gây ô nhiễm không khí và nước (Nguồn: VOV).</li>
                 </ul>
             </p>
+    </div>
+
+    <div class="section2">
+        <div class="img2">
+            <img src="https://cdn.fbsbx.com/v/t59.2708-21/340225226_790460578722539_7147463543090218462_n.gif?stp=dst-gif_p960x960&_nc_cat=109&ccb=1-7&_nc_sid=041f46&_nc_ohc=eeSp2Cse2ZMAX_Iyg29&_nc_ht=cdn.fbsbx.com&oh=03_AdR7mncfLCKd_dduLvEEecmiYMkEEMcgiz8nG7O8y368LQ&oe=6468D1A9" alt="" id="img2">
         </div>
 
-        <div class="section2">
-            <h1 id="section2-h1">I. Chiến lược</h1>
+        <div class="text">
+                <h1 id="section2-h1">I. Chiến lược</h1>
 
-            <h2 id="section2-h2.1">1. Nghiên cứu và đầu tư vào công nghệ sản xuất vải tái chế và vải từ nguyên liệu xanh để thiết kế sản phẩm chất lượng cao và thân thiện với môi trường:</h2>
             <p id="section2-p.1">
+                <strong>1. Nghiên cứu và đầu tư vào công nghệ sản xuất vải tái chế và vải từ nguyên liệu xanh để thiết kế sản phẩm chất lượng cao và thân thiện với môi trường:</strong><br>
                 - Sử dụng vải tái chế: OWEN có thể tạo ra một dòng sản phẩm sử dụng vải tái chế để giảm thiểu lượng rác thải ra môi trường.<br>
                 - Sử dụng nguyên liệu xanh: OWEN có thể sử dụng các nguyên liệu xanh tại Việt Nam như vải từ sen, cà phê, bạc hà, tre… có tính áp dụng cao và được thị trường đón nhận.<br>
                 <ul>
@@ -66,23 +71,34 @@
                 </ul>
             </p>
 
-            <p id="section2-p.3"><strong>
-                3. Tăng cường các hoạt động tiếp thị và quảng bá sản phẩm</strong> thông qua các kênh truyền thông trực tuyến để tăng cường nhận diện thương hiệu qua các nền tảng mạng xã hội phổ biến với đối tượng tiêu dùng ngày nay như FaceBook, TikTok, Instagram,...
+            <p id="section2-p.3">
+                <strong>3. Tăng cường các hoạt động tiếp thị và quảng bá sản phẩm</strong> thông qua các kênh truyền thông trực tuyến để tăng cường nhận diện thương hiệu qua các nền tảng mạng xã hội phổ biến với đối tượng tiêu dùng ngày nay như FaceBook, TikTok, Instagram,...
                 <ul>
                     <li>OWEN cũng có thể kí kết hợp đồng quảng cáo với các nhà sáng tạo nội dung trên mạng. Một ví dụ điển hình như: Châu Bùi - một người mẫu(model) hay làm những nội dung dành cho thế hệ trẻ rất nổi tiếng và cũng đang có hình ảnh đẹp trong mắt người hâm mộ.</li>
+                </ul>
+            </p>
+            
+            <p id="section2-p.4">
+                <strong>4. Xây dựng quan hệ đối tác với các nhà cung cấp vật liệu</strong> tái chế và nguyên liệu xanh để đảm bảo nguồn cung ổn định, sử dụng các chính sách đãi ngộ, hợp tác hợp lý nhằm phát triển đôi bên.<br>
+                -Một số doanh nghiệp Owen có thể kí kết hợp tác<br>
+                <ul>
+                    <li>Công ty TNHH Zero Waste Vietnam</li><br>
+                    <p>Địa chỉ: 33 Đ. Lê Thị Riêng, Phường Phạm Ngũ Lão, Quận 1, Thành phố Hồ Chí Minh</p>
+                    <li>Tổ chức xã hội REMAKEHUB</li><br>
+                    <p>Trang web: <a href="http://www.remakehub.co/about">link</a></p>
                 </ul>
             </p>
         </div>
     </div>
 
-    <div class="section2">
-        <div class="img2"></div>
-        <div class="text2"></div>
-    </div>
-
     <div class="section3">
         <div class="img3"></div>
         <div class="text3"></div>
+    </div>
+
+    <div class="section4">
+        <div class="img4"></div>
+        <div class="text4"></div>
     </div>
 
     <script src="./Main.js"></script>
