--- a/Main.html
+++ b/Main.html
@@ -60,7 +60,7 @@
               
                 <div class="post__content">
                     <header>
-                    <h1 class="post__header.1"><span>Chiến lước</span></h1>
+                    <h1 class="post__header.1"><span>Chiến lược</span></h1>
                     </header>
                 
                     <p class="post__text">
