--- a/Main.html
+++ b/Main.html
@@ -87,6 +87,14 @@
                                     <li>Mặc dù sẽ phải trả giá cao hơn cho việc nhập nguyên liệu sản xuất, tuy nhiên, trong bối cảnh thị trường khát khao có doanh nghiệp dệt may, sự đổi mới của OWEN chắc chắn sẽ được đón nhận của công chúng.</li>
                                     <li>Khi OWEN trở nên nổi tiếng hơn, sẽ có nhiều khách hàng hơn, từ đó doanh số bán sản phẩm sẽ tăng lên, lợi nhuận vì thế cũng tỉ lệ thuận theo.</li>
                                 </ul>
+                                => Tổng quát, OWEN sẽ sử dụng mô hình 6R
+                                Rethink: định hướng lại cách phát triển doanh nghiệp.<br>
+                                Refuse: từ chối tham gia vào fast fashion do ngành này được chứng minh qua nhiều nghiên cứu là làm gia tăng rác thải ra môi trường.<br>
+                                Reduce: giảm thiểu sử dụng nguyên liệu không bền vũng.<br>
+                                Reuse: Sử dụng lại những nguyên liệu có thể sử dụng tiếp được. Ví dụ: sử dụng bã cà phê (kết hợp polyme <5%) để làm vải.<br>
+                                Repair: Sửa chữa lại những bộ quần áo đã qua sử dụng được thu lại từ khách hàng(nếu có thể).<br>
+                                Recycle: Tái chế lại vải của những bộ quần áo đã thu lại được từ khách hàng để tạo nên những bộ đồ mới giúp giảm chi phí sản xuất và tạo được danh tiếng doanh nghiệp xanh.<br>
+
                             </p>
                 
                             <p id="section2-p.2">
